--- a/templates/menu.html
+++ b/templates/menu.html
@@ -28,6 +28,7 @@
 
           <li><a href="{% url 'crearCuenta'%}">Crear Cuenta</a></li>
           <li><a href="{% url 'listarPagar'%}">Ver Cuentas</a></li>
+          <li><a href="{% url 'payments'%}">Pagos</a></li>
         </ul>
       </li>
       
