--- a/templates/cuentas/payment_account_details.html
+++ b/templates/cuentas/payment_account_details.html
@@ -15,7 +15,7 @@
 
 {% endblock css %}
 
-{% block titulo_pagina %} Nueva Cuenta Por Pagar {% endblock titulo_pagina %}
+{% block titulo_pagina %} Detalle de Cuenta Por Pagar {% endblock titulo_pagina %}
 
 {% block miga_pan %}
 <li><a href="#">Cuentas por Pagar</a></li>
