--- a/templates/cuentas/payment_account_edit.html
+++ b/templates/cuentas/payment_account_edit.html
@@ -3,7 +3,7 @@
 {% load bootstrap3 %}
 {% load humanize %}
 
-{% block titulo %} Crear Cuenta{% endblock titulo %}
+{% block titulo %} Editar Cuenta{% endblock titulo %}
 
 {% block css %}
 
@@ -15,7 +15,7 @@
 
 {% endblock css %}
 
-{% block titulo_pagina %} Nueva Cuenta Por Pagar {% endblock titulo_pagina %}
+{% block titulo_pagina %} Edicion de Cuenta por Pagar {% endblock titulo_pagina %}
 
 {% block miga_pan %}
 <li><a href="#">Cuentas por Pagar</a></li>
