template crear_cotizaciones

--- a/templates/compras/crear_solicitudes.html
+++ b/templates/compras/crear_solicitudes.html
@@ -31,7 +31,7 @@ Generar Solicitud de Compra
                         </h3>                  
                     </div>
 
-                    <div id="collapse1" class="panel-collapse collapse">
+                    <div id="collapse1">
                         <div class="form-group row">
                         <div class="col-xs-6">
                             <label for="inputNombre">Nombre Solicitante</label>
@@ -69,7 +69,6 @@ Generar Solicitud de Compra
                         <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50">                          
                         </textarea>
                         </div>
-                    <!-- collapse --> 
                     </div>   
                 <!-- panel -->                                               
                 </div>
