--- a/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
@@ -59,19 +59,15 @@
                     <td>
                         {%  if orden.estado == 'AS' %}
                         {%  if cargo == 'O' %}
-                        <button style="margin: 1px 15%" type="button" class="btn btn-primary btn-xs cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_asignacion">Aceptar Orden</button>
+                        <button type="button" class="btn btn-primary btn-xs cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_asignacion">Aceptar Orden</button>
                         {%  elif cargo == 'C' %}
-                        <a href="{% url 'ordenes_servicio:cancelar_orden_servicio' orden.id %}">
-                            <button style="margin: 1px 25%" name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-danger btn-xs">Cancelada</button>
-                        </a>
+                        <button name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-xs btn-danger cancelar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_cancelacion">Cancelada</button>
                         {% endif %}
                         {% else %}
                         {%  if cargo == 'O' %}
-                        <div style="margin: 1px 7%" class="btn-group btn-group-xs">
+                        <div class="btn-group btn-group-xs">
                             <button name="{{orden.estado}}" id="cerrar_boton" type="button" class="btn btn-success cerrar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_cerrada">Cerrada</button>
-                            <a href="{% url 'ordenes_servicio:cancelar_orden_servicio' orden.id %}">
-                                <button name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-danger">Cancelada</button>
-                            </a>
+                            <button name="{{orden.estado}}" id="cancelar_boton" type="button" class="btn btn-danger btn-xs cancelar_orden" data-toggle="modal" data-id={{orden.id}} data-target="#confirmar_cancelacion">Cancelada</button>
                         </div>
                         {% endif %}
                         {% endif %}
@@ -131,6 +127,37 @@
     <!-- /.modal-dialog -->
 </div>
 <!-- /.modal -->
+
+
+<!-- Modal para confirmar cancelacion -->
+<div class="modal fade" id="confirmar_cancelacion">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
+                    <span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title">Cancelar Orden de Servicio</h4>
+            </div>
+            <div class="modal-body">
+                <p>¿Está seguro que desea cancelar la orden de servicio No.
+                    <b id="my_orden_id"></b>?</p>
+                    <form>
+                        <div class="form-group">
+                          <label for="">Comentarios sobre la cancelacion:</label>
+                          <input type="text" class="form-control" id="comentarios_cancelacion">
+                        </div>
+                    </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default pull-left" data-dismiss="modal">No</button>
+                <button onclick="cancelar_orden_servicio()" type="button" class="btn btn-danger">Si</button>
+            </div>
+        </div>
+        <!-- /.modal-content -->
+    </div>
+    <!-- /.modal-dialog -->
+</div>
+<!-- /.modal -->
 {% endblock contenido %}
 
 {% block js %}
@@ -176,6 +203,11 @@
         var orden_id = $(this).data('id');
         $(".modal-body #my_orden_id").text(orden_id);
     });
+    //activar modal en cancelar orden
+    $('.cancelar_orden').click(function(){
+        var orden_id = $(this).data('id');
+        $(".modal-body #my_orden_id").text(orden_id);
+    });
     //cuando se da click en SI en cerrar orden
     function cerrar_orden_servicio(){
         var orden_id = document.getElementById('my_orden_id').innerText;
@@ -216,5 +248,29 @@
             }
         });
     }
+    //cuando se da click en SI en cancelar orden
+    function cancelar_orden_servicio(){
+        var orden_id = document.getElementById('my_orden_id').innerText;
+        var comentarios = document.getElementById("comentarios_cancelacion").value; //cambiar
+        console.log(orden_id);
+        $.ajax({
+            type: "GET",
+            url: '{% url "ordenes_servicio:cancelar_orden_servicio" %}',
+            data: {
+                'orden_id': orden_id,
+                'comentarios' : comentarios
+            },
+            dataType: 'json',
+            success: function(data){
+                if(data.success == true){ // if true (1)
+                    setTimeout(function(){// wait for 5 secs(2)
+                        location.reload(); // then reload the page.(3)
+                    }, 100);
+                }
+            }
+        });
+    }
+
+
 </script>
 {% endblock js %}
