comentar data.success y borrar linea innecesaria
No se que hacer en este, si el data.success es false, igual se debe recargar la pagina

--- a/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
+++ b/apps/ordenes_servicio/templates/ordenes_servicio/consultar_orden_servicio.html
@@ -220,11 +220,11 @@
             },
             dataType: 'json',
             success: function(data){
-                if(data.success == true){ // if true (1)
+                //if(data.success == true){ // if true (1)
                     setTimeout(function(){// wait for 5 secs(2)
                         location.reload(); // then reload the page.(3)
                     }, 100);
-                }
+                //}
             }
         });
     }
@@ -240,11 +240,11 @@
             },
             dataType: 'json',
             success: function(data){
-                if(data.success == true){ // if true (1)
+                //if(data.success == true){ // if true (1)
                     setTimeout(function(){// wait for 5 secs(2)
                         location.reload(); // then reload the page.(3)
                     }, 100);
-                }
+                //}
             }
         });
     }
@@ -262,11 +262,11 @@
             },
             dataType: 'json',
             success: function(data){
-                if(data.success == true){ // if true (1)
+                //if(data.success == true){ // if true (1)
                     setTimeout(function(){// wait for 5 secs(2)
                         location.reload(); // then reload the page.(3)
                     }, 100);
-                }
+                //}
             }
         });
     }
