--- a/templates/compras/crear_solicitudes.html
+++ b/templates/compras/crear_solicitudes.html
@@ -8,6 +8,10 @@
 <li class="active"><a href="#">Generar Solicitud de compra</a></li>
 {% endblock miga_pan %}
 
+{% block titulo %}
+Generar Solicitud de Compra
+{% endblock titulo %} 
+
 {% block titulo_pagina %}
 Generar Solicitud de Compra
 {% endblock titulo_pagina %} 
