--- a/templates/compras/crear_solicitudes.html
+++ b/templates/compras/crear_solicitudes.html
@@ -24,65 +24,62 @@ Generar Solicitud de Compra
         <!-- general form elements -->
         <div class="box box-primary">                      
           <!-- form start -->
-          <form role="form">
-            <div class="box-body">                                   
-                <div class="panel panel-default">   
-                    <div class="panel-heading">
-                        <h3 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#acordion" href="#collapse1">
-                            Nueva Solicitud
-                        </a>                        
-                        </h3>                  
-                    </div>
+          <form role="form">                                  
+            <div class="panel panel-default">   
+                <div class="panel-heading">
+                    <h3 class="panel-title">Nueva Solicitud</h3>                  
+                </div>
 
-                    <div id="collapse1">
-                        <div class="form-group row">
+                <div>
+                    <div class="form-group row">
                         <div class="col-xs-6">
                             <label for="inputNombre">Nombre Solicitante</label>
                             <input type="text" class="form-control" id="inputNombre" disabled
                             placeholder={{solicitud.solicitante}}>                          
                         </div>
 
-                        <div class="col-xs-3">
+                        <div class="col-xs-6">
                             <label for="inputId">Identificacion</label>
                             <input type="text" class="form-control" id="inputId" disabled 
                             placeholder={{solicitud.solicitante}}> 
                         </div>                        
+                    </div>
+
+                    <div class="form-group row">
+                        <div class="col-xs-6">
+                            <label for="inputElemento">Elemento requerido</label>
+                            <input type="text" class="form-control" id="inputElemento">                        
                         </div>
 
-                        <div class="form-group">
-                        <label for="inputElemento">Elemento requerido</label>
-                        <input type="text" class="form-control" id="inputElemento">                        
+                        <div class="col-xs-6">
+                            <label for="inputCantidad">Cantidad</label>
+                            <input type="text" class="form-control" id="inputCantidad">                        
                         </div>
+                    </div>
 
-                        <div class="form-group">
-                        <label for="inputCantidad">Cantidad</label>
-                        <input type="text" class="form-control" id="inputCantidad">                        
-                        </div>
-
-                        <div class="form-group row">                        
+                    <div class="form-group row">                        
                         <div class="form-group col-xs-6">
                             <label for="exampleInputFile">Fecha esperada</label>                  
                             <!-- Date -->                            
                             <input type="text" class="form-control pull-right" id="datepicker">
                         </div>
-                        </div>
+                    </div>
 
-                        <div class="form-group">
-                        <label for="inputJust">Justificacion</label>
-                        <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50">                          
-                        </textarea>
+                    <div class="form-group row">
+                        <div class="form-group col-xs-12">
+                            <label for="inputJust">Justificacion</label>
+                            <textarea id="inputJust" class="form-control pull-right" name="inputJust" rows="7" cols="50">                          
+                            </textarea>
                         </div>
-                    </div>   
-                <!-- panel -->                                               
+                    </div>
                 </div>
-            <!-- /.box-body -->
-            </div>    
-            <div class="box-footer text-center">
-              <button type="submit" class="btn btn-success">Guardar Solicitud</button>
-              <button type="reset" class="btn btn-danger">Cancelar</button>
-            </div>        
-            <!-- /.box -->            
+                
+                <div class="box-footer text-center">
+                    <button type="submit" class="btn btn-success">Guardar Solicitud</button>
+                    <button type="reset" class="btn btn-danger">Cancelar</button>
+                </div> 
+            <!-- panel -->                                               
+            </div>     
           </form>          
           <!-- /.box-body -->
         </div>
